Fix: Use Nyxwallpaper.webp for all backgrounds, remove png refs, ensure .webp loads everywhere

--- a/src/os/Desktop.scss
+++ b/src/os/Desktop.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: url('/Nyxwallpaper.png') center center/cover no-repeat;
+  background: url('/Nyxwallpaper.webp') center center/cover no-repeat;
   /* If you want to keep the gradient overlay, use:
   background: linear-gradient(120deg, #232a39cc 0%, #181c25cc 100%), url('../assets/Nyxwallpaper.png') center center/cover no-repeat; */
   overflow: hidden;
